--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,22 @@ appdirs==1.4.3
 attrs==18.2.0
 black==18.9b0
 Click==7.0
+config==0.3.9
 confusable-homoglyphs==3.2.0
-Django==1.11
+dj-database-url==0.5.0
+Django==1.11.6
+django-bootstrap3==10.0.1
 django-bootstrap4==0.0.7
+django-heroku==0.3.1
 django-registration==2.4.1
+django-tinymce==2.7.0
+django-url-or-relative-url-field==0.1.1
+djangorestframework==3.9.0
+gunicorn==19.9.0
+Pillow==5.4.0
+psycopg2==2.7.6.1
+psycopg2-binary==2.7.6.1
+python-decouple==3.1
 pytz==2018.7
 toml==0.10.0
+whitenoise==4.1.2
